spices/postgres/tests/errors/postgres-rows-use-after-free.tur
;; U1 negative: Rows is :linear (consumed by rows-free); rows-count borrows,
;; so reading a freed result set is a use-after-free.
;;   tur check -Xsubstructural tests/errors/postgres-rows-use-after-free.tur
;;   => error [TUR-E0101]: linear value 'rows' used after being consumed
;; Compile-fail fixture (see postgres-conn-use-after-close.tur for the note).
(defmodule postgres_rows_use_after_free_test
  (export)
(import postgres/db  :refer [Conn db-query])
(import postgres/row :refer [Rows rows-of rows-count rows-free])
(defn use-after-free [^borrow conn : Conn] : int
  (let [rows (rows-of (db-query conn "SELECT 1"))]
    (do
      (rows-free rows)        ;; single legal consumption
      (rows-count rows))))    ;; ERROR TUR-E0101: borrow after consume
) ;; end
